# alfred-qsirch-workflow

./: Cargo.toml  Makefile  Package.resolved  Package.swift  README.md
Sources/: AlfredUtil.swift  Qsirch.swift  QsirchNetwork.swift
Sources/Alfred/: AlfredUtil.swift
Sources/Alfred/Model/: AlfredItem.swift  AlfredMod.swift  AlfredModel.swift  AlfredModifiers.swift
Sources/AlfredQsirchCLI/: AlfredQsirchApp.swift  CommonTools.swift
Sources/AlfredQsirchCLI/Command/: Command+Search.swift  Command+Update.swift  Command.swift
Sources/AlfredQsirchCore/: Qsirch.swift  QsirchNetwork.swift
Sources/AlfredQsirchCore/Model/: CustomCodableAny.swift  QsirchError.swift  SearchResult.swift
Sources/AlfredQsirchCore/Shared/: CommonTools.swift
Sources/Command/: Command+Search.swift  Command.swift
Sources/Model/: AlfredItem.swift  QsirchError.swift  SearchResult.swift
Sources/QsirchCore/: Qsirch.swift  QsirchNetwork.swift
Sources/QsirchCore/Model/: LoginResult.swift  SearchResult.swift
Sources/QsirchCore/Shared/: QsirchTools.swift
Sources/Shared/: CommonTools.swift
Tests/AlfredQsirchTests/CLI/: SearchCommandTests.swift
Tests/AlfredQsirchTests/Core/: QsirchCommonToolsTests.swift  QsirchNetworkTests.swift  QsirchTests.swift
Tests/AlfredQsirchTests/Shared/: QsirchBaseTests.swift
Tests/alfred-qsirch-Tests/: SearchCommandTests.swift
src/: common.rs  lib.rs  main.rs
src/command/: mod.rs  search.rs  update.rs
src/qsirch/: error.rs  mod.rs  model.rs  network.rs  tools.rs
swift/: Package.swift
swift/Sources/AlfredQsirchCLI/Command/: Command+Search.swift
(+1 files in other folders)
