[package]
name = "alfred-qsirch"
version = "0.1.0"
edition = "2021"
description = "Alfred workflow to search QNAP via Qsirch API"

[dependencies]
alfred = { path = "../alfred-workflow-utils/alfred", features = ["script-filter", "updater"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = true, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros"] }
urlencoding = "2"
